--- a/templates/todolist/index.html
+++ b/templates/todolist/index.html
@@ -51,9 +51,13 @@ Tasks
 
         <br>
 
-        <h2 class="bg-secondary text-light py-2 rounded text-center">Completed:</h2>
+        <h2 class="bg-secondary text-light py-2 rounded text-center" data-bs-toggle="collapse"
+            href="#collapsed" role="button" aria-expanded="false" aria-controls="collapsed">
+            <i class="bi bi-chevron-compact-down" style="float: left; margin-left: 5px;"></i>
+            Completed:
+        </h2>
 
-        <ul class="list-group">
+        <ul class="list-group collapse" id="collapsed">
             {% for task in tasks %}
                 {% if task.completed == True %}
                     <li class="list-group-item list-group-item-action">
