--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    user page
-</body>
-</html>
+{% extends 'user/base.html' %}
+
+
+{% block title %}
+Profile
+{% endblock title %}
+
+
+{% block content %}
+
+    {% if user.is_authenticated %}
+    {% else %}
+        <a href="{% url 'login'%}?next={{request.path}}">Login</a>
+    {% endif %}
+
+    <p>
+        <a href="{% url 'todo_index' %}">TODO-list</a>
+    </p>
+
+{% endblock content %}
